--- a/Exercice2/index.html
+++ b/Exercice2/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Exercice 2</title>
-    <script src="./js/main.js"></script>
+    <script defer src="./js/main.js"></script>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-    <img src="" alt="Créé en JS">
+    <img src="" alt="Créé en JS" onclick="chargeImage(this);">
 </body>
 
 </html>
