--- a/Exercice1/index.html
+++ b/Exercice1/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Appe de la fonction "change" au click -->
     <div><button onclick="change()">Changement de couleur</button></div>
 </body>
 
