--- a/Exercice2/index.html
+++ b/Exercice2/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Creation d'une image sans source avec fonction qui se déclenche au click definit dans le document .js -->
     <img src="" alt="Créé en JS" onclick="chargeImage(this);">
 </body>
 
